src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Curr_period__c</fullName>
        <label>Curr_period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fisc_year__c</fullName>
        <label>Fisc_year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inv_corr_fac__c</fullName>
        <label>Inv_corr_fac</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Items_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Items Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maint_stat__c</fullName>
        <label>Maint_stat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reorder_pt__c</fullName>
        <label>Reorder_pt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repl_qty__c</fullName>
        <label>Repl_qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkuNum__c</fullName>
        <label>SkuNum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stge_loc__c</fullName>
        <label>Stge_loc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ind_sector__c</fullName>
        <label>ind_sector</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>material__c</fullName>
        <label>material</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>matl_type__c</fullName>
        <label>matl_type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>matl_type__c</columns>
        <columns>material__c</columns>
        <columns>ind_sector__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>